--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel serve ./src/index.html",
-    "build": "parcel build -d ./ ./src/index.html"
+    "build": "parcel build -d dist ./src/index.html"
   },
   "repository": {
     "type": "git",
