--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -24,11 +24,12 @@ jobs:
         run: npm run build
       - name: Deploy
         run: |
-          git config user.name uzimaru0000
-          git config user.email uzimaru0000@users.noreply.github.com
-          git remote set-url origin https://uzimaru0000:${{ secrets.GITHUB_TOKEN }}@github.com/uzimaru0000/uzimaru0000.github.io.git
+          git config user.name "uzimaru0000"
+          git config user.email "shuji365630@gmail.com"
+          git remote rm origin
+          git remote add origin https://uzimaru0000:${{ secrets.GITHUB_TOKEN }}@github.com/uzimaru0000/uzimaru0000.github.io.git
           git rm -r --ignore-unmatch *
           cp dist/* ./
           git add .
           git commit -m "deploy"
-          git push origin master
+          git push origin HEAD
