--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,14 @@ tmp/
 temp/
 
 # End of https://www.gitignore.io/api/node
+
+# Created by https://www.toptal.com/developers/gitignore/api/elm
+# Edit at https://www.toptal.com/developers/gitignore?templates=elm
+
+### Elm ###
+# elm-package generated files
+elm-stuff
+# elm-repl generated files
+repl-temp-*
+
+# End of https://www.toptal.com/developers/gitignore/api/elm
