--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-shadow-dom-retarget-events": "^1.0.0",
+    "elm": "^0.19.1-3",
+    "elm-hot": "^1.1.4",
+    "node-elm-compiler": "^5.0.4",
     "parcel-bundler": "^1.12.4",
     "react-shadow-dom-retarget-events": "^1.0.11",
     "sass": "^1.26.5",
