--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -2,10 +2,33 @@ on:
   push:
     branches: [develop]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+env:
+  UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
+jobs:
+  unity_build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v1.1.0
+        with:
+          path: unity/Library
+          key: Library-unity-WebGL
+          restore-keys: |
+            Library-unity-
+            Library-
+      - uses: webbertakken/unity-builder@v1
+        with:
+          projectPath: unity
+          unityVersion: 2019.4.0f1
+          targetPlatform: WebGL
+      - uses: actions/upload-artifact@v1
+        with:
+          name: unity_build
+          path: build
+
+  node_build:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -22,6 +45,31 @@ jobs:
         run: npm install
       - name: build
         run: npm run build
+      - uses: actions/upload-artifact@v1
+        with:
+          name: node_build
+          path: dist/
+
+  deploy:
+    needs: [unity_build, node_build]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Download building result for node
+        uses: actions/download-artifact@v1
+        with:
+          name: unity_build
+      - name: Move file for node
+        run: mv ./node_build ./dist
+
+      - name: Download building result for unity
+        uses: actions/download-artifact@v1
+        with:
+          name: unity_build
+      - name: Move file for unity
+        run: mv ./unity_build ./dist/unity
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
