--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: unity_build
-          path: build/WebGL/WebGL
+          path: build/WebGL
 
   node_build:
     runs-on: ubuntu-latest
