--- a/unity/Packages/manifest.json
+++ b/unity/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.14",
     "com.unity.ugui": "1.0.0",
+    "com.uzimaru0000.unitea": "https://github.com/uzimaru0000/UniTEA.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -39,5 +40,11 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
+  },
+  "lock": {
+    "com.uzimaru0000.unitea": {
+      "revision": "HEAD",
+      "hash": "9aae57e5d246cddb629313af8542d5c58b697642"
+    }
   }
 }
