--- a/package.json
+++ b/package.json
@@ -23,19 +23,25 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-shadow-dom-retarget-events": "^1.0.0",
+    "@vue/component-compiler-utils": "^3.1.2",
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
     "node-elm-compiler": "^5.0.4",
     "parcel-bundler": "^1.12.4",
     "react-shadow-dom-retarget-events": "^1.0.11",
     "sass": "^1.26.5",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
+    "@vue/composition-api": "^0.6.3",
     "free-style": "^4.0.0",
     "lit-element": "^2.3.1",
     "lit-html": "^1.2.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "vue": "^2.6.11",
+    "vue-custom-element": "^3.2.14",
+    "vue-hot-reload-api": "^2.3.4"
   }
 }
