--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es6",
     "module": "es6",
     "moduleResolution": "node",
-    "lib": ["esnext", "dom"],
+    "lib": ["dom", "ESNext"],
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
