--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-shadow-dom-retarget-events": "^1.0.0",
     "@vue/component-compiler-utils": "^3.1.2",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
     "node-elm-compiler": "^5.0.4",
