--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "elm-hot": "^1.1.4",
     "node-elm-compiler": "^5.0.4",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-wasm.rs": "^1.2.16",
     "react-shadow-dom-retarget-events": "^1.0.11",
     "sass": "^1.26.5",
     "typescript": "^3.9.3",
